# Data-Compression-Algorithms

./: README.md
coding/: CMakeLists.txt
coding/src/: CMakeLists.txt  main.cpp
coding/src/coders/: LZ77Coder.cpp  LZWCoder.cpp  ShannonFanoCoder.cpp
coding/src/common/: Converter.cpp  Packer.cpp  Unpacker.cpp  declarations.cpp
coding/src/experiments/: CSVWriter.cpp  Experimenter.cpp  Watch.cpp
coding/src/experiments/output/: Untitled.ipynb  analyze.ipynb  frequency.csv  overall.csv
coding/src/experiments/output/.ipynb_checkpoints/: analyze-checkpoint.ipynb
coding/tests/: CMakeLists.txt  coders_test.cpp  packing_test.cpp  special_tests.cpp
coding/tests/files/: coding.txt  lz77_test.txt  lzw_test.txt  shannon_fano_test.txt  special_coding.txt
coding/tests/files/small-test-data-results/: lzw+cat.docx
coding/tests/files/small-test-data-sources/: cat.pptx  cat.txt
